Fix background and menu overflowing content area

--- a/menu-drawer.css
+++ b/menu-drawer.css
@@ -32,7 +32,7 @@
   padding: 20px;
   top: 0;
   left: -200px;
-  position: fixed;
+  position: absolute;
   z-index: -10;
   opacity: 0%;
   transition: all 0.3s;
