--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ body {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  font-family: "Charcoal", sans-serif
+  font-family: "Charcoal", sans-serif;
 }
 
 .content {
-  max-width: 480px;
-  border: 1px dashed black;
+  width: 480px;
+  height: calc(100vh - 30px);
+  position: relative;
+  padding: 20px;
 }
 
 .dark-background {
@@ -20,9 +22,9 @@ body {
 }
 
 .background-image {
-  background-image: url("assets/clear.jpg");
+  background-image: url("assets/blue.jpg");
   background-size: cover;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -97,11 +99,11 @@ form input[type=submit]:hover {
 }
 
 .weather-properties {
+  height: 90vh;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  padding: 10px;
 }
 
 .current-location {
@@ -112,6 +114,7 @@ form input[type=submit]:hover {
 .current-temp {
   grid-area: 2 / 1 / 3 / 3;
   font-size: 80px;
+  align-self: start;
 }
 
 .type {
@@ -119,6 +122,7 @@ form input[type=submit]:hover {
   justify-self: end;
   align-self: end;
   transform: rotate(-90deg);
+  font-size: 22px;
 }
 
 .feels-like {
@@ -184,5 +188,5 @@ form input[type=submit]:hover {
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   border: 3px solid white;
-  padding: 20px;
+  padding: 20px 60px;
 }
